RESOLVED FIXED30325
SVG Masking with wrong offset
https://bugs.webkit.org/show_bug.cgi?id=30325
Summary SVG Masking with wrong offset
Dirk Schulze
Reported 2009-10-12 23:54:13 PDT
There is an offset of the mask here of about ~10%? This seems strange, because the default value for x and y should be -10%. I'll try to make a simpler test case later.
Attachments
Fix offset of SVG Masking (21.77 KB, patch)
2009-10-14 13:33 PDT, Dirk Schulze
no flags
Fix offset of SVG Masking (21.90 KB, patch)
2009-10-14 16:16 PDT, Dirk Schulze
zimmermann: review+
Dirk Schulze
Comment 1 2009-10-14 13:33:17 PDT
Created attachment 41186 [details] Fix offset of SVG Masking Some values were used to create a MaskingRect. This rect was transformed and instead of using the transformed rect, the masker continued with using the old values.
Dirk Schulze
Comment 2 2009-10-14 16:16:25 PDT
Created attachment 41193 [details] Fix offset of SVG Masking new changelog
Nikolas Zimmermann
Comment 3 2009-10-14 16:19:23 PDT
Comment on attachment 41193 [details] Fix offset of SVG Masking Nice fix, r=me.
Dirk Schulze
Comment 4 2009-10-14 16:29:32 PDT
landed in r49598.
Note You need to log in before you can comment on or make changes to this bug.